I have gotten rid of styling on hours 10-12 in the style.css file and added 0's to hours 8, 9, and 1-5 in the index.html file instead to handle a spacing issue my ocd didnt like in the deployed time-block section.

--- a/assets/style.css
+++ b/assets/style.css
@@ -96,14 +96,9 @@ flex-direction: row;
 }
 
 #hour8, #hour9, #hour13, #hour14, #hour15, #hour16, #hour17 {
-  padding-left: 10px;
+  /*padding-left: 10px;*/
 }
 
 #hour8, #hour9, #hour10, #hour11, #hour12, #hour13, #hour14, #hour15, #hour16, #hour17 {
   padding-bottom: 2px;
-}
-
-.hour10, .hour11, .hour12 {
-  display: flex;
-  align-items: center;
 }
